Fixed align padding

--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -872,7 +872,7 @@ padding-bottom: 100px;
 .article h2 {
   font-size: 24px;
   line-height: 38px;
-  margin: 150px 25% 40px 10%;
+  margin: 150px 25% 40px 5%;
   font-weight: normal;
   align-content: center;
 }
@@ -880,7 +880,7 @@ padding-bottom: 100px;
 .article p {
   font-size: 18px;
   line-height: 32px;
-  margin: 0px 25% 40px 10%;
+  margin: 0px 25% 40px 5%;
   max-width: 770px;
 }
 
